--- a/ui/cartooneditor.ui
+++ b/ui/cartooneditor.ui
@@ -63,11 +63,14 @@
            <stylestrategy>PreferAntialias</stylestrategy>
           </font>
          </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
          <property name="text">
           <string>Add frame</string>
          </property>
          <property name="autoDefault">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
          <property name="default">
           <bool>false</bool>
