--- a/res.qrc
+++ b/res.qrc
@@ -12,5 +12,9 @@
         <file>res/models/Pig/preview.png</file>
         <file>res/styles/button/style.txt</file>
         <file>res/styles/slider/style.txt</file>
+        <file>res/styles/cartooneditor/style.txt</file>
+        <file>res/styles/framewidget/style.txt</file>
+        <file>res/styles/modelswidget/style.txt</file>
+        <file>res/styles/scene/style.txt</file>
     </qresource>
 </RCC>
