--- a/ui/cartooneditor.ui
+++ b/ui/cartooneditor.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>679</width>
-    <height>666</height>
+    <width>961</width>
+    <height>731</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,47 +38,66 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>126</width>
-          <height>640</height>
+          <width>183</width>
+          <height>705</height>
          </rect>
         </property>
        </widget>
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout">
+      <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
        <item>
         <widget class="QGraphicsView" name="graphicsView">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="renderHints">
           <set>QPainter::Antialiasing|QPainter::LosslessImageRendering|QPainter::SmoothPixmapTransform|QPainter::VerticalSubpixelPositioning</set>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="submitButton">
-         <property name="font">
-          <font>
-           <family>Segoe UI Variable Display</family>
-           <pointsize>40</pointsize>
-           <stylestrategy>PreferAntialias</stylestrategy>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true"/>
-         </property>
-         <property name="text">
-          <string>Add frame</string>
-         </property>
-         <property name="autoDefault">
-          <bool>true</bool>
-         </property>
-         <property name="default">
-          <bool>false</bool>
-         </property>
-         <property name="flat">
-          <bool>false</bool>
-         </property>
-        </widget>
+        <layout class="QHBoxLayout" name="buttonsLayout">
+         <item>
+          <widget class="QPushButton" name="PlayButton">
+           <property name="text">
+            <string>Play</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="AddFrameButton">
+           <property name="text">
+            <string>Add frame</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="DeleteFrameButton">
+           <property name="text">
+            <string>Delete frame</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="SaveCartoonButton">
+           <property name="text">
+            <string>Save cartoon</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="LoadCartoonButton">
+           <property name="text">
+            <string>Load cartoon</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
       </layout>
      </item>
@@ -101,8 +120,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>126</width>
-          <height>640</height>
+          <width>183</width>
+          <height>705</height>
          </rect>
         </property>
        </widget>
