--- a/res.qrc
+++ b/res.qrc
@@ -24,8 +24,14 @@
         <file>res/styles/framewidget/style.txt</file>
         <file>res/styles/modelswidget/style.txt</file>
         <file>res/styles/scene/style.txt</file>
+        <file>res/styles/contextmenu/style.txt</file>
         <file>res/icons/playbutton.png</file>
         <file>res/icons/addbutton.png</file>
         <file>res/icons/deletebutton.png</file>
+        <file>res/icons/loadbutton.png</file>
+        <file>res/icons/savebutton.png</file>
+        <file>res/icons/menudelete.png</file>
+        <file>res/icons/placefront.png</file>
+        <file>res/icons/placeback.png</file>
     </qresource>
 </RCC>
